# InsightX

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  test_curl.py  test_full_pipeline.py  test_scraper.py
src/: main.py
src/api/: routes.py
src/config/: mock_responses.py  prompts.py
src/services/: llm_service.py  scraper_service.py
src/static/: index.html
